--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^10.0.7",
-    "@react-three/fiber": "^9.1.2",
-    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/engine": "^3.9.1",
     "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "framer-motion": "^12.9.7",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.507.0",
@@ -25,13 +24,8 @@
     "react-intersection-observer": "^9.16.0",
     "react-parallax-tilt": "^1.7.294",
     "react-tooltip": "^5.28.1",
-    "react-tsparticles": "^2.12.2",
     "swiper": "^11.2.6",
-    "three": "^0.176.0",
-    "tsparticles": "^3.8.1",
-    "tsparticles-engine": "^2.12.0",
     "typewriter-effect": "^2.22.0",
-    "vanilla-tilt": "^1.8.1",
     "yet-another-react-lightbox": "^3.23.0"
   },
   "devDependencies": {
