--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "@tsparticles/engine": "^3.9.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.9.1",
-    "framer-motion": "^12.9.7",
+    "framer-motion": "^12.23.24",
     "lottie-react": "^2.4.1",
-    "lucide-react": "^0.507.0",
-    "next": "15.3.1",
+    "lucide-react": "^0.555.0",
+    "next": "^16.0.5",
     "nodemailer": "^7.0.2",
-    "react": "^19.0.0",
+    "react": "^19.2.0",
     "react-countup": "^6.5.3",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-parallax-tilt": "^1.7.294",
