--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "postcss": "^8.5.3",
+    "puppeteer": "^24.31.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
